--- a/src/main/resources/templates/admin/admin_login.html
+++ b/src/main/resources/templates/admin/admin_login.html
@@ -33,15 +33,9 @@
             </div>
             
             <button type="submit" class="submit-btn">로그인</button>
+            <a href="/admin_register" class="register-btn">회원가입</a>
         </form>
         
-        <div class="links">
-            <a href="/admin_register">회원가입</a>
-            <span class="divider">|</span>
-            <a href="/admin/find-id">아이디 찾기</a>
-            <span class="divider">|</span>
-            <a href="/admin/find-password">비밀번호 찾기</a>
-        </div>
     </div>
 </body>
 </html>
