--- a/src/main/resources/templates/fragments/adminHeader.html
+++ b/src/main/resources/templates/fragments/adminHeader.html
@@ -42,13 +42,13 @@
                 <div class="menu-item main-menu">기업관리</div>
                 <a href="/admin_corp" class="menu-item sub-menu">기업목록</a>
                 <a th:href="@{/admin/admin_review}" class="menu-item">리뷰관리</a>
-                <a href="#" class="menu-item">공고관리</a>
+                <a th:href="@{/admin/admin_jobPosting}" class="menu-item">공고관리</a>
             </div>
 
             <!-- 고객센터 관리 그룹 -->
             <div class="menu-group">
                 <div class="menu-item main-menu">고객센터관리</div>
-                <a th:href="@{/admin/inquiry_list}" class="menu-item sub-menu">문의내역</a>
+                <a th:href="@{/admin/admin_inquiry}" class="menu-item sub-menu">문의내역</a>
                 <a th:href="@{/admin/admin_faq}" class="menu-item sub-menu">FAQ</a>
             </div>
         </div>
