--- a/src/main/resources/templates/admin/admin_faq.html
+++ b/src/main/resources/templates/admin/admin_faq.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
 <title>민기인력 - 관리자 FAQ</title>
@@ -407,8 +408,12 @@ $(function() {
         </tbody>
       </table>
       <div class="button-container">
+      <span sec:authorize="hasRole('대리') or hasRole('과장') or hasRole('팀장') or hasRole('SUPER')">
         <button id="createBtn" class="delete-btn" type="button" style="background-color: green">작성</button>
+        </span>
+        <span sec:authorize="hasRole('팀장') or hasRole('SUPER')">
         <button id="deleteBtn" class="delete-btn" type="button" disabled>삭제</button>
+        </span>
       </div>
     </div>
   </section>
