--- a/src/main/resources/templates/fragments/adminHeader.html
+++ b/src/main/resources/templates/fragments/adminHeader.html
@@ -27,22 +27,21 @@
             <div class="menu-group">
                 <a href="/admin_dashboard" class="menu-item">대시보드</a>
                 <a th:href="@{/admin/admin_list}" class="menu-item">관리자명단</a>
-                <a th:href="@{/admin/notice_list}" class="menu-item">공지사항</a>
             </div>
 
             <!-- 회원 관리 그룹 -->
             <div class="menu-group">
                 <div class="menu-item main-menu">회원관리</div>
                 <a href="/admin_member" class="menu-item sub-menu">회원목록</a>
-                <a href="/admin_resume" class="menu-item">이력서관리</a>
+                <a href="/admin_resume" class="menu-item sub-menu">이력서관리</a>
             </div>
 
             <!-- 기업 관리 그룹 -->
             <div class="menu-group">
                 <div class="menu-item main-menu">기업관리</div>
                 <a href="/admin_corp" class="menu-item sub-menu">기업목록</a>
-                <a th:href="@{/admin/admin_review}" class="menu-item">리뷰관리</a>
-                <a th:href="@{/admin/admin_jobPosting}" class="menu-item">공고관리</a>
+                <a th:href="@{/admin/admin_review}" class="menu-item sub-menu">리뷰관리</a>
+                <a th:href="@{/admin/admin_jobPosting}" class="menu-item sub-menu">공고관리</a>
             </div>
 
             <!-- 고객센터 관리 그룹 -->
@@ -50,6 +49,7 @@
                 <div class="menu-item main-menu">고객센터관리</div>
                 <a th:href="@{/admin/admin_inquiry}" class="menu-item sub-menu">문의내역</a>
                 <a th:href="@{/admin/admin_faq}" class="menu-item sub-menu">FAQ</a>
+                <a th:href="@{/admin/notice_list}" class="menu-item sub-menu">공지사항</a>
             </div>
         </div>
     </nav>
