--- a/src/main/resources/templates/admin/admin_inquiry.html
+++ b/src/main/resources/templates/admin/admin_inquiry.html
@@ -216,7 +216,7 @@ $(function() {
         $('#inquiryRegsDate').val(inquiry.regsDate);
         
         // 답변 상태에 따른 처리
-        if (inquiry.answerStat === '1' || inquiry.answerStat === 1) { // DB에서 숫자로 저장
+        if (inquiry.answerStat === 'Y' || inquiry.answerStat === 1) { // DB에서 숫자로 저장
           $('#answerContent').val(inquiry.answer || '');
           $('#answerDate').val(inquiry.answerDate || '');
           $('#saveBtn').text('답변 수정');
@@ -463,7 +463,9 @@ $(function() {
     <div class="pagination-wrapper">
 	 <!-- 버튼 그룹: 수직 정렬 -->
       <div class="button-group">
+      <span sec:authorize="hasRole('팀장') or hasRole('SUPER')">
         <button id="btnWithdraw" class="delete-btn" type="button">삭제</button>
+        </span>
       </div>
       
       <nav class="pagination" aria-label="페이지 네비게이션">
