--- a/src/main/resources/templates/admin/admin_review.html
+++ b/src/main/resources/templates/admin/admin_review.html
@@ -157,7 +157,9 @@ $(function() {
 		
 	 <!-- 버튼 그룹: 수직 정렬 -->
   <div class="button-group">
+  <span sec:authorize="hasRole('팀장') or hasRole('SUPER')">
     <button id="btnWithdraw" class="delete-btn" type="button">삭제</button>
+    </span>
   </div>
       
       <nav class="pagination" aria-label="페이지 네비게이션">
